# rust_by_example

./: .gitignore  Box_stack_and_heap.rs  LICENSE  README.md  aliases_for_result.rs  aliasing.rs  alternate_hashmap_key_types.rs  and_then_combinators.rs  argument_parsing.rs  arrays_and_slices.rs  associated_type_solution.rs  associated_types_problem.rs  basic_generics.rs  binding.rs  borrowing_and_aliasing.rs  bounds_lifetimes.rs  byte_strings.rs  c_like_enums.rs  capturing_closures.rs  casting.rs  channels.rs  clone.rs  closures.rs  closures_an_input_parameters.rs  closures_as_output_parameters.rs  coercion_lifetimes.rs  combinators_map.rs  command.rs  comments.rs  conditional_compilation.rs  const_fn.rs  constants.rs  cratery.rs  cratery_client.rs  custom_attributes.rs  custom_display.rs  custom_drop_implementation.rs  dead_code_attribute.rs  debug.rs  declare_first.rs  (+138 more)
compatibility_test/: Cargo.toml
compatibility_test/src/: lib.rs
compatibility_test_client/: Cargo.toml
compatibility_test_client/src/: main.rs
development_dependencies/: Cargo.toml
development_dependencies/src/: lib.rs
documentation_testing/: Cargo.toml
documentation_testing/src/: lib.rs  main.rs
foo/: Cargo.toml
foo/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/tests/: integration_test.rs
my/: inaccessible.rs  mod.rs  nested.rs
