[package]
name = "compatibility_test_client"
version = "0.1.0"
authors = ["Timmy Jose <zoltan.jose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

compatibility_test = { path = "/Users/z0ltan/dev/study/rust/rust_by_example/compatibility_test" }
